--- a/12_inspect_cross_validation.ipynb
+++ b/12_inspect_cross_validation.ipynb
@@ -2,13 +2,24 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {
     "vscode": {
      "languageId": "r"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mFailed to start the Kernel. \n",
+      "\u001b[1;31mUnable to start Kernel 'R (bacterial_dating)' due to connection timeout. \n",
+      "\u001b[1;31mView Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
+     ]
+    }
+   ],
    "source": [
     "library(data.table)\n",
     "library(ggplot2)\n",
@@ -17,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {
     "vscode": {
      "languageId": "r"
@@ -30,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {
     "vscode": {
      "languageId": "r"
@@ -138,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {
     "vscode": {
      "languageId": "r"
@@ -213,7 +224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {
     "vscode": {
      "languageId": "r"
@@ -364,7 +375,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {
     "vscode": {
      "languageId": "r"
@@ -437,7 +448,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {
     "vscode": {
      "languageId": "r"
@@ -518,7 +529,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {
     "vscode": {
      "languageId": "r"
@@ -572,7 +583,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {
     "vscode": {
      "languageId": "r"
@@ -696,7 +707,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {
     "vscode": {
      "languageId": "r"
@@ -787,7 +798,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {
     "vscode": {
      "languageId": "r"
@@ -800,7 +811,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {
     "vscode": {
      "languageId": "r"
@@ -813,7 +824,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {
     "vscode": {
      "languageId": "r"
@@ -836,7 +847,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": null,
    "metadata": {
     "vscode": {
      "languageId": "r"
@@ -947,7 +958,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": null,
    "metadata": {
     "vscode": {
      "languageId": "r"
@@ -1022,7 +1033,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": null,
    "metadata": {
     "vscode": {
      "languageId": "r"
@@ -1142,7 +1153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": null,
    "metadata": {
     "vscode": {
      "languageId": "r"
@@ -1211,7 +1222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": null,
    "metadata": {
     "vscode": {
      "languageId": "r"
@@ -1274,7 +1285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": null,
    "metadata": {
     "vscode": {
      "languageId": "r"
@@ -1282,12 +1293,11 @@
    },
    "outputs": [
     {
-     "ename": "ERROR",
-     "evalue": "Error in library(caret): there is no package called ‘caret’\n",
-     "output_type": "error",
-     "traceback": [
-      "Error in library(caret): there is no package called ‘caret’\nTraceback:\n",
-      "1. library(caret)"
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Loading required package: lattice\n",
+      "\n"
      ]
     }
    ],
@@ -1303,14 +1313,53 @@
      "languageId": "r"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Confusion Matrix and Statistics\n",
+       "\n",
+       "          Reference\n",
+       "Prediction     0     1     2\n",
+       "         0 14301   303   984\n",
+       "         1   220 57229   907\n",
+       "         2  1451  2503 10266\n",
+       "\n",
+       "Overall Statistics\n",
+       "                                         \n",
+       "               Accuracy : 0.9278         \n",
+       "                 95% CI : (0.926, 0.9295)\n",
+       "    No Information Rate : 0.6809         \n",
+       "    P-Value [Acc > NIR] : < 2.2e-16      \n",
+       "                                         \n",
+       "                  Kappa : 0.8541         \n",
+       "                                         \n",
+       " Mcnemar's Test P-Value : < 2.2e-16      \n",
+       "\n",
+       "Statistics by Class:\n",
+       "\n",
+       "                     Class: 0 Class: 1 Class: 2\n",
+       "Sensitivity            0.8954   0.9533   0.8445\n",
+       "Specificity            0.9822   0.9599   0.9480\n",
+       "Pos Pred Value         0.9174   0.9807   0.7219\n",
+       "Neg Pred Value         0.9770   0.9059   0.9744\n",
+       "Prevalence             0.1812   0.6809   0.1379\n",
+       "Detection Rate         0.1622   0.6491   0.1164\n",
+       "Detection Prevalence   0.1768   0.6619   0.1613\n",
+       "Balanced Accuracy      0.9388   0.9566   0.8962"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
-    "confusionMatrix(test$default, predicted)"
+    "with(d, confusionMatrix(factor(y_actual, levels=c(0,1,2)), factor(prediction, levels=c(0,1,2))))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": null,
    "metadata": {
     "vscode": {
      "languageId": "r"
@@ -1343,7 +1392,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": null,
    "metadata": {
     "vscode": {
      "languageId": "r"
@@ -1375,7 +1424,7 @@
    "mimetype": "text/x-r-source",
    "name": "R",
    "pygments_lexer": "r",
-   "version": "4.2.3"
+   "version": "3.10.10"
   },
   "orig_nbformat": 4
  },
